# telex-python

./: .env.sample  .gitignore  LICENSE  Pipfile  README.md  build.sh  meson.build  mypy.ini  org.gnome.Telex.json  python3-deps.json  python3-requests.json  requirements.txt  ruff.toml  run  xyz.daimones.Telex.json  xyz.daimones.telex.json
data/: meson.build  org.gnome.Telex.appdata.xml.in  org.gnome.Telex.desktop.in  org.gnome.Telex.gschema.xml  xyz.daimones.Telex.appdata.xml.in  xyz.daimones.Telex.desktop.in  xyz.daimones.Telex.gschema.xml  xyz.daimones.telex.appdata.xml.in  xyz.daimones.telex.desktop.in  xyz.daimones.telex.gschema.xml
data/icons/: meson.build
flatpak/: flatpak-pip-generator.py  python-deps.json  xyz.daimones.Telex.json
po/: LINGUAS  POTFILES  de.po  en.po  es.po  fr.po  meson.build
src/: app.py  app.pyi  main.py  main.ui  meson.build  services.py  settings.py  store.py  telex-python.gresource.xml  telex-python.in  telex.in  window.py  window.ui  windows.py
src/assets/: meson.build
src/assets/images/: meson.build
src/assets/styles/: auth.css  home.css  meson.build  new_post.css  post_detail.css  profile.css  search.css  subreddits.css
src/styles/: home.css  meson.build
src/utils/: __init__.py  common.py  common.pyi  constants.py  meson.build  services.py  services.pyi
src/windows/: __init__.py  auth.py  auth.pyi  home.py  home.pyi  main_window.py  meson.build  new_post.py  onboarding.py  post_detail.py  preferences.py  profile.py  search.py  subreddits.py  titlebar_controller.py
