pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
moduledir = join_paths(pkgdatadir, 'telex_python/assets/images')

telex_python_sources = ['light.jpg', 'placeholder.jpg', 'comments.png', 'reddit-placeholder.png']

install_data(telex_python_sources, install_dir: moduledir)